cmake_minimum_required(VERSION 3.10)

project(
	Hazel
	VERSION 0.1
	LANGUAGES C CXX
)

add_subdirectory(${CMAKE_SOURCE_DIR}/Hazel)
add_subdirectory(${CMAKE_SOURCE_DIR}/Sandbox)
add_subdirectory(${CMAKE_SOURCE_DIR}/Hazel/vendor/glfw)
add_subdirectory(${CMAKE_SOURCE_DIR}/Hazel/vendor/glad)
add_subdirectory(${CMAKE_SOURCE_DIR}/Hazel/vendor/imgui)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin/${PROJECT_NAME})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY bin/${PROJECT_NAME})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY int/${PROJECT_NAME})
set(CMAKE_PDB_OUTPUT_DIRECTORY	   int/${PROJECT_NAME})

OPTION(ASSIMP_BUILD_IFC_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_IQM_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_IRR_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_LWQ_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_LWS_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_AC_IMPORTER			FALSE)
OPTION(ASSIMP_BUILD_ASE_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_ASSBIN_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_BVH_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_MD2_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_MD3_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_MD5_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_MDL_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_NFF_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_NDO_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_OFF_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_IRRMESH_IMPORTER	FALSE)
OPTION(ASSIMP_BUILD_CSM_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_B3D_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_DXF_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_CSM_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_LWO_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_M3D_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_MDC_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_PLY_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_MS3D_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_XGL_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_COB_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_Q3D_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_RAW_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_SIB_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_SMD_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_STL_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_TERRAGEN_IMPORTER	FALSE)
OPTION(ASSIMP_BUILD_X_IMPORTER			FALSE)
OPTION(ASSIMP_BUILD_X3D_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_3MF_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_MMD_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_HMP_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_AMF_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_OGRE_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_3DS_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_OPENGEX_IMPORTER	FALSE)
OPTION(ASSIMP_BUILD_Q3BSP_IMPORTER		FALSE)
OPTION(ASSIMP_BUILD_3D_IMPORTER			FALSE)

OPTION(ASSIMP_BUILD_ALL_EXPORTERS_BY_DEFAULT FALSE)

add_subdirectory(${CMAKE_SOURCE_DIR}/Hazel/vendor/assimp)
add_subdirectory(${CMAKE_SOURCE_DIR}/Hazel/vendor/stbimage)
add_subdirectory(${CMAKE_SOURCE_DIR}/Hazel/vendor/tinyobjloader)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}" PROPERTY VS_STARTUP_PROJECT Sandbox)